# network-c-dev

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/ns-lookup/: CMakeLists.txt
apps/ns-lookup/include/: ns-lookup.h
apps/ns-lookup/src/: ns-lookup.c  ns-lookup_app.c
apps/tcp/: CMakeLists.txt
apps/tcp/client/echo/: CMakeLists.txt
apps/tcp/client/echo/include/: echo.h
apps/tcp/client/echo/src/: app.c  echo.c
apps/tcp/client/square-root/: CMakeLists.txt
apps/tcp/client/square-root/include/: main.h
apps/tcp/client/square-root/src/: app.c  main.c
apps/tcp/server/: CMakeLists.txt
apps/tcp/server/echo/: CMakeLists.txt
apps/tcp/server/echo/include/: echo.h
apps/tcp/server/echo/src/: app.c  echo.c
apps/tcp/server/square-root/: CMakeLists.txt
apps/tcp/server/square-root-mp/: CMakeLists.txt
apps/tcp/server/square-root-mp/include/: main.h
apps/tcp/server/square-root-mp/src/: app.c  main.c
apps/tcp/server/square-root-mp2/: CMakeLists.txt
apps/tcp/server/square-root-mp2/include/: main.h
apps/tcp/server/square-root-mp2/src/: app.c  main.c
apps/tcp/server/square-root-mt/: CMakeLists.txt
apps/tcp/server/square-root-mt/include/: main.h
apps/tcp/server/square-root-mt/src/: main.c
apps/tcp/server/square-root/include/: main.h
apps/tcp/server/square-root/src/: app.c  main.c
libs/: CMakeLists.txt
libs/net-utils/: CMakeLists.txt
libs/net-utils/include/: net-utils.h
libs/net-utils/src/: net-utils.c
libs/shared-data/: CMakeLists.txt
libs/shared-data/include/: shared-data.h
libs/shared-data/src/: shared-data.c
libs/tcp-server-mp/: CMakeLists.txt
libs/tcp-server-mp/include/: tcp-server-mp.h
libs/tcp-server-mp/src/: tcp-server-mp.c
libs/thread-utils/: CMakeLists.txt
libs/thread-utils/include/: thread-utils.h
libs/thread-utils/src/: thread-utils.c
ns-lookup/: CMakeLists.txt
ns-lookup/include/: ns-lookup.h
ns-lookup/src/: ns-lookup.c
